[package]
name = "leakbuster"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
druid = "0.7.0"
nom = "7.1.0"
rusqlite = "0.26.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = "0.3.25"
tempfile = "3.2.0"
