[package]
name = "leakbuster"
authors = ["OCzarnecki"]
description = "Leakbuster is a tool for monitoring the time for which applications are running, and for triggering configurable events once the usage time meets some condition."
homepage = "https://github.com/OCzarnecki/leakbuster"
repository = "https://github.com/OCzarnecki/leakbuster"
license = "MIT"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
by_address = "1.0.4"
chrono = "0.4.19"
druid = "0.7.0"
home = "0.5.3"
nom = "7.1.0"
priority-queue = "1.2.1"
rusqlite = "0.26.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = "0.3.25"
tempfile = "3.2.0"
